unpackaged/main/default/objects/ccpe_ocp__External_Deliverable__c/ccpe_ocp__External_Deliverable__c.object-meta.xml
<CustomObject>
    <label>External Deliverable</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Deliverables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>