unpackaged/main/default/objects/ccpe_ocp__External_Deliverable__c/fields/ccpe_ocp__Card__c.field-meta.xml
<CustomField>
    <fullName>ccpe_ocp__Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Card that this External Deliverable is related to.</description>
    <inlineHelpText>The Card that this External Deliverable is related to.</inlineHelpText>
    <label>Card</label>
    <referenceTo>project_cloud__Card__c</referenceTo>
    <relationshipLabel>External Deliverables</relationshipLabel>
    <relationshipName>External_Deliverables</relationshipName>
    <type>Lookup</type>
</CustomField>