unpackaged/main/default/objects/ccpe_ocp__External_Deliverable__c/fields/ccpe_ocp__Checklist_Group__c.field-meta.xml
<CustomField>
    <fullName>ccpe_ocp__Checklist_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The checklist group containing this deliverable.</description>
    <inlineHelpText>The checklist group containing this deliverable.</inlineHelpText>
    <label>Checklist Group</label>
    <referenceTo>project_cloud__Checklist_Group__c</referenceTo>
    <relationshipLabel>External Deliverables</relationshipLabel>
    <relationshipName>External_Deliverables</relationshipName>
    <type>Lookup</type>
</CustomField>