unpackaged/main/default/objects/ccpe_ocp__External_Deliverable__c/fields/ccpe_ocp__Description__c.field-meta.xml
<CustomField>
    <fullName>ccpe_ocp__Description__c</fullName>
    <description>A short description of this deliverable.</description>
    <inlineHelpText>A short description of this deliverable.</inlineHelpText>
    <label>Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>