unpackaged/main/default/objects/ccpe_ocp__External_Deliverable__c/fields/ccpe_ocp__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>ccpe_ocp__Due_Date__c</fullName>
    <description>Date that this deliverable is expected to be completed by.</description>
    <inlineHelpText>Date that this deliverable is expected to be completed by.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>