unpackaged/main/default/objects/ccpe_ocp__External_Deliverable__c/fields/ccpe_ocp__IsComplete__c.field-meta.xml
<CustomField>
    <fullName>ccpe_ocp__IsComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>External Deliverable Complete</description>
    <inlineHelpText>External Deliverable Complete</inlineHelpText>
    <label>Is Complete</label>
    <type>Checkbox</type>
</CustomField>