unpackaged/main/default/objects/ccpe_ocp__External_Deliverable__c/fields/ccpe_ocp__Position__c.field-meta.xml
<CustomField>
    <fullName>ccpe_ocp__Position__c</fullName>
    <description>The position of this deliverable within a checklist group.</description>
    <inlineHelpText>The position of this deliverable within a checklist group.</inlineHelpText>
    <label>Position</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>