unpackaged/main/default/objects/ccpe_ocp__External_Deliverable__c/fields/ccpe_ocp__Project_CCPE_Ignore__c.field-meta.xml
<CustomField>
    <fullName>ccpe_ocp__Project_CCPE_Ignore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Project Rollup that this External Deliverable is related to.</inlineHelpText>
    <label>Project (Rollup)</label>
    <referenceTo>project_cloud__Project__c</referenceTo>
    <relationshipLabel>External Deliverables (Rollup)</relationshipLabel>
    <relationshipName>External_Deliverables_Rollup</relationshipName>
    <type>Lookup</type>
</CustomField>