unpackaged/main/default/objects/ccpe_ocp__External_Deliverable__c/fields/ccpe_ocp__Project_Task__c.field-meta.xml
<CustomField>
    <fullName>ccpe_ocp__Project_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Project Task that this External Deliverable is related to.</description>
    <inlineHelpText>The Project Task that this External Deliverable is related to.</inlineHelpText>
    <label>Project Task</label>
    <referenceTo>project_cloud__Project_Task__c</referenceTo>
    <relationshipLabel>External Deliverables</relationshipLabel>
    <relationshipName>External_Deliverables</relationshipName>
    <type>Lookup</type>
</CustomField>