unpackaged/main/default/objects/ccpe_ocp__External_Deliverable__c/fields/ccpe_ocp__Stakeholder_Contact__c.field-meta.xml
<CustomField>
    <fullName>ccpe_ocp__Stakeholder_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The stakeholder assigned to this deliverable.</description>
    <inlineHelpText>The stakeholder assigned to this deliverable.</inlineHelpText>
    <label>Stakeholder Contact</label>
    <referenceTo>project_cloud__Stakeholder_Contact__c</referenceTo>
    <relationshipLabel>External Deliverables</relationshipLabel>
    <relationshipName>External_Deliverables</relationshipName>
    <type>Lookup</type>
</CustomField>